# scorpion-card-pub

./: LICENSE  README.md  README.txt  ext.v  kbd.v
atmega/: BootProtocolKeyboard.cpp  BootProtocolKeyboard.h  BootProtocolMouse.cpp  BootProtocolMouse.h  HIDJoystick.cpp  HIDJoystick.h  HIDParser.cpp  HUBDriver.cpp  KeyboardMapper.cpp  KeyboardMapper.h  KeysList.h  Link.h  MAX3421.h  Timers.h  USBHost.cpp  ZxKeyboard.cpp  ZxKeyboard.h  ZxLayoutLeftShift.cpp  ZxLayoutNormal.cpp  build  generic-gcc-avr.cmake
atmega/src/: BootProtocolDriver.h  BootProtocolKeyboard.cpp  BootProtocolKeyboard.h  BootProtocolMouse.cpp  BootProtocolMouse.h  EEPROM.cpp  EEPROM.h  HIDClassCommon.h  HIDReport.h  HUBDriver.h  KeyboardMapper.cpp  KeysList.cpp  Link.cpp  Link.h  Main.cpp  StdDescriptors.h  USBHost.cpp  UsbHostTask.cpp  ZxKeyboard.cpp  ZxKeyboard.h
ext/: ext.pin  ext.pof  ext.v
kbd/: kbd.pin  kbd.v
kicad/: card.kicad_pcb  card.kicad_sch
revA/: README.md
revA/atmega/: .gitignore  CMakeLists.txt
revA/atmega/release/: sc_multicard-atmega32u2-eeprom.hex  sc_multicard-atmega32u2.hex
revA/atmega/src/: BootProtocolDriver.cpp  BootProtocolKeyboard.cpp  BootProtocolKeyboard.h  BootProtocolMouse.cpp  Common.h  EEPROM.cpp  HIDDriver.cpp  HIDDriver.h  HIDJoystick.cpp  HIDJoystick.h  KeyboardMapper.cpp  KeyboardMapper.h  KeysList.h  Timers.cpp  USBHost.cpp  USBHost.h  UsbHostTask.h  ZxKeyboard.cpp  ZxKeyboard.h  ZxLayout.h  ZxLayoutLeftShift.cpp  ZxLayoutNormal.cpp
revA/kbd/: kdb.pof
revA/kicad/: .gitignore  card.kicad_prl  card.kicad_pro
revA/sync/: sync.pin
revB/cpld/: README.md
revB/cpld/epm3064-ext/: mouse.pof
revB/cpld/epm3064-main/: test.pin  test.pof  test.v
revB/firmware/: README.md  fw-1.hex
revB/gerbers/ext/: README.md
revB/gerbers/main/: README.md
revB/pcb/: .gitignore  ExtCard.kicad_sch  card.kicad_pcb  card.kicad_pro  card.kicad_sch
revB/service/: README.md  VirtualSerial.inf
revC-mikka/: README.md
revC-mikka/atmega/: CMakeLists.txt  generic-gcc-avr.cmake
revC-mikka/atmega/release/: sc_multicard-atmega328p-eeprom.hex  sc_multicard-atmega328p.hex
revC-mikka/atmega/src/: AlasmLayoutNormal.cpp  Console.cpp  Console.h  EEPROM.cpp  EEPROM.h  KeyboardMapper.cpp  KeyboardMapper.h  KeysList.cpp  KeysList.h  Ports.cpp  Timers.cpp  Timers.h  UsbHostTask.cpp  UsbHostTask.h  ZxKeyboard.cpp  ZxKeyboard.h  ZxLayoutLeftShift.cpp  ZxLayoutNormal.cpp  ZxLayouts.cpp
revC-mikka/atmega/src/SPI/: SPI.cpp  SPI.h
revC-mikka/atmega/src/USBHost/: BootProtocolDriver.cpp  BootProtocolDriver.h  BootProtocolKeyboard.cpp  BootProtocolKeyboard.h  CMakeLists.txt  DescriptorParser.cpp  DescriptorParser.h  HIDClassCommon.h  HIDDriver.cpp  HIDDriver.h  HIDJoystickDriver.cpp  HIDJoystickDriver.h  HIDMouseDriver.cpp  HIDMouseDriver.h  HIDParser.cpp  HIDParser.h  HIDReport.h  HUBDriver.cpp  HUBDriver.h  USBHost.cpp  USBHost.h  coroutines.h  usb_coroutines.h  usblib.h
revC-mikka/mousecard/: mouse.pin  mouse.v
revC/atmega/: .gitignore
revC/atmega/release/: sc_multicard-atmega328p-eeprom.hex  sc_multicard-atmega328p.hex
revC/atmega/src/: AlasmLayoutLeftShift.cpp  AlasmRusLayoutLeftShift.cpp  AlasmRusLayoutNormal.cpp  EEPROM.cpp  EEPROM.h  Joystick.h  KeyboardMapper.cpp  KeyboardMapper.h  KeysList.cpp  KeysList.h  Ports.cpp  StdRequestType.h  UsbHostTask.cpp  UsbHostTask.h  ZxKeyboard.cpp  ZxKeyboard.h  ZxLayout.h  ZxLayoutLeftShift.cpp  ZxLayoutNormal.cpp  ZxLayouts.cpp
revC/atmega/src/Config/: LUFAConfig.h
revC/atmega/src/SPI/: SPI.cpp  SPI.h
revC/atmega/src/USBHost/: BootProtocolDriver.cpp  BootProtocolDriver.h  BootProtocolKeyboard.cpp  CMakeLists.txt  Common.h  HIDJoystickDriver.cpp  HIDJoystickDriver.h  HIDParser.cpp  HIDParser.h  HUBDriver.cpp  HUBDriver.h  MAX3421.h  USBHost.cpp  USBHost.h  coroutines.h  usb_coroutines.h
revC/epm7064/: kbd.pin  kbd.pof  kbd.v
revC/kicad/: card.kicad_pcb  card.kicad_prl  card.kicad_pro  card.kicad_sch
sync/: sync.pin  sync.pof  sync.v
